--- a/po/ja.po
+++ b/po/ja.po
@@ -10321,7 +10321,7 @@ msgstr ""
 #: server_status.php:1508
 #| msgid "Pause monitor"
 msgid "Using the monitor:"
-msgstr "モニタの使い方"
+msgstr "モニタの使い方："
 
 #: server_status.php:1510
 #, fuzzy
