Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 03:47+0200\n"
+"PO-Revision-Date: 2011-08-21 03:49+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -10344,7 +10344,6 @@ msgstr ""
 "れぞれのグラフにある歯車のアイコンを通じて削除を行えます。"
 
 #: server_status.php:1512
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/> Ok, you are good to go! Once you click "
 #| "'Start monitor' your browser will refresh all displayed charts in a "
@@ -10361,14 +10360,9 @@ msgid ""
 "confirmed, this will load a table of grouped queries, there you may click on "
 "any occuring SELECT statements to further analyze them."
 msgstr ""
-"<b>モニタの使い方：</b><br/>「モニタ開始」をクリックすると、ブラウザは一定間"
-"隔で表示されている全てのグラフを更新します。「設定」のところよりグラフを追加"
-"や再描画間隔の変更が行え、それぞれのグラフにある歯車のアイコンを通じて削除を"
-"行えます。<p>ログからクエリ分析を行うには、グラフで該当期間を選択します。マウ"
-"スの左ボタンを押したままグラフの上をドラッグするように移動させてください。こ"
-"うすることで、グラフの任意の期間を選択できます。グループ毎に分類されたクエリ"
-"が読み込まれ表示されますので、実行されたクエリを確認することができます。"
-"SELECT 文の部分をクリックすることで、更なるクエリ解析が可能です。</p>"
+"ログからクエリ分析を行うには、グラフで該当期間を選択します。マウスの左ボタンを押したままグラフの上をドラッグするように移動させてください。こうすることで"
+"、グラフの任意の期間を選択できます。グループ毎に分類されたクエリが読み込まれ表示されますので、実行されたクエリを確認することができます。SELECT "
+"文の部分をクリックすることで、更なるクエリ解析が可能です。"
 
 #: server_status.php:1519
 msgid "Please note:"
