--- a/po/ja.po
+++ b/po/ja.po
@@ -10366,7 +10366,7 @@ msgstr ""
 
 #: server_status.php:1519
 msgid "Please note:"
-msgstr ""
+msgstr "注意事項："
 
 #: server_status.php:1521
 #, fuzzy
