--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 04:00+0200\n"
+"PO-Revision-Date: 2011-08-21 04:03+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -1214,7 +1214,7 @@ msgstr "クエリの統計"
 #: js/messages.php:93
 #| msgid "Failed to read configuration file"
 msgid "Local monitor configuration incompatible"
-msgstr "ローカルのモニタ環境設定は互換性がありません。"
+msgstr "ローカルのモニタ環境設定に互換性なし"
 
 #: js/messages.php:94
 msgid ""
