--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 11:21+0200\n"
+"PO-Revision-Date: 2011-08-21 11:23+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12567,6 +12567,7 @@ msgstr "Çok fazla tablo kilidi acilen onaylanmadı."
 #: po/advisory_rules.php:192 po/advisory_rules.php:197
 msgid "Optimize queries and/or use InnoDB to reduce lock wait."
 msgstr ""
+"Sorguları uyarlayın ve/veya kilit beklemesini azaltmak için InnoDB kullanın."
 
 #: po/advisory_rules.php:193
 #, php-format
