--- a/po/tr.po
+++ b/po/tr.po
@@ -12581,7 +12581,7 @@ msgstr "Tablo kilit bekleme oranı"
 #: po/advisory_rules.php:198
 #, php-format
 msgid "Table lock wait rate: %s, this value should be less than 1 per hour"
-msgstr ""
+msgstr "Tablo kilit bekleme oranı: %s, bu değer saat başına 1'den az olmalıdır"
 
 #: po/advisory_rules.php:200
 msgid "Thread cache"
