--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 11:26+0200\n"
+"PO-Revision-Date: 2011-08-21 11:34+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12592,6 +12592,8 @@ msgid ""
 "Thread cache is disabled, resulting in more overhead from new connections to "
 "MySQL."
 msgstr ""
+"İşlem önbelleği etkisizleştirildi, yeni bağlantılardan MySQL'e daha fazla ek "
+"yük olarak sonuçlanır."
 
 #: po/advisory_rules.php:202
 msgid "Enable the thread cache by setting {thread_cache_size} > 0."
