--- a/po/tr.po
+++ b/po/tr.po
@@ -12623,7 +12623,7 @@ msgstr "İşlem önbelleği tavan oranı: %%%s, bu değer %%80'in üzerinde olma
 
 #: po/advisory_rules.php:210
 msgid "Threads that are slow to launch"
-msgstr ""
+msgstr "İşlemler çalıştırmak için yavaş"
 
 #: po/advisory_rules.php:211
 msgid "There are too many threads that are slow to launch."
