Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 11:52+0200\n"
+"PO-Revision-Date: 2011-08-21 12:11+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12682,6 +12682,10 @@ msgid ""
 "do not close database handlers properly get killed sooner. Make sure the "
 "code closes database handlers properly."
 msgstr ""
+"max_connections değerini arttırmayla veya wait_timeout değerini azaltmayla "
+"daha çabuk sonlandırmak düzgün bir şekilde veritabanı işleyicilerini "
+"kapatmaz. Kodun veritabanı işleyicilerini düzgün bir şekilde kapattığından "
+"emin olun."
 
 #: po/advisory_rules.php:223
 #, php-format
