--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 12:13+0200\n"
+"PO-Revision-Date: 2011-08-21 12:14+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12701,7 +12701,7 @@ msgstr "Durdurulan bağlantıların yüzdesi"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
-msgstr ""
+msgstr "Çok fazla bağlantı sonlandırıldı."
 
 #: po/advisory_rules.php:227 po/advisory_rules.php:232
 msgid ""
