--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 12:22+0200\n"
+"PO-Revision-Date: 2011-08-21 12:23+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12733,6 +12733,7 @@ msgstr "Çok fazla bağlantı durduruldu"
 msgid ""
 "Aborted connections rate is at %s, this value should be less than 1 per hour"
 msgstr ""
+"Durdurulan bağlantıların oranı %s, bu değer saat başına 1'den az olmalıdır"
 
 #: po/advisory_rules.php:235
 msgid "Percentage of aborted clients"
