--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 12:23+0200\n"
+"PO-Revision-Date: 2011-08-21 12:30+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12749,6 +12749,9 @@ msgid ""
 "MySQL properly. This can be due to network issues or code not closing a "
 "database handler properly. Check your network and code."
 msgstr ""
+"İstemciler genellikle bağlantıları MySQL'e düzgün bir şekilde "
+"yaklaşmadıklarında durdurulurlar. Bu ağ sorunlarından veya kodun veritabanı "
+"işleyicisine düzgün bir şekilde yaklaşmadığından dolayı olabilir."
 
 #: po/advisory_rules.php:238
 #, php-format
