Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -12710,7 +12710,7 @@ msgid ""
 "source-of-aborted_connects/\\\">This article</a> might help you track down "
 "the source."
 msgstr ""
-"Bağlantılar genellikle izin verilmediklerinde durdurulur. <a "
+"Bağlantılar genellikle izin verilmediklerinde durdurulurlar. <a "
 "href=\\\"http://www.mysqlperformanceblog.com/2008/08/23/how-to-track-down-the-"
 "source-of-aborted_connects/\\\">Bu makale</a> kaynağın izini aramakta yardımcı "
 "olabilir."
