Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 12:31+0200\n"
+"PO-Revision-Date: 2011-08-21 12:32+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12766,6 +12766,7 @@ msgstr "Durdurulan istemcilerin oranı"
 #, php-format
 msgid "Aborted client rate is at %s, this value should be less than 1 per hour"
 msgstr ""
+"Durdurulan istemcilerin oranı %s, bu değer saat başına 1'den az olmalıdır"
 
 #: po/advisory_rules.php:245
 msgid "Is InnoDB disabled?"
