--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 12:34+0200\n"
+"PO-Revision-Date: 2011-08-21 13:14+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12810,6 +12810,17 @@ msgid ""
 "com/2007/01/increase-innodblogfilesize-proper-way.html\\\">this blog entry</"
 "a>"
 msgstr ""
+"Özellikle InnoDB tablolarına çok fazla yazmalı bir sistemde, "
+"innodb_log_file_size değerini {innodb_buffer_pool_size} değerinin %%25'ine "
+"ayarlamalısınız. Ancak bu değeri daha büyütmek, veritabanı çökmelerinde "
+"kurtarma zamanı daha uzun olacaktır bu yüzden bu değer 256 MiB'tan çok daha "
+"yükseğe ayarlanmamalıdır. Lütfen unutmayın bununla birlikte bu değişkenin "
+"değerini basitçe değiştiremezsiniz. Sunucuyu kapatmanız, InnoDB günlük "
+"dosyalarını kaldırmanız, my.cnf içindeki yeni değeri ayarlamanız, sunucuyu "
+"başlatmanız gerekir, sonrada herşeyin iyi gittiğini anlamak için hata "
+"günlüklerini kontrol etmelisiniz. Aynı zamanda <a "
+"href=\\\"http://mysqldatabaseadministration.blogspot.com/2007/01/increase-"
+"innodblogfilesize-proper-way.html\\\">bu blog girişine</a> bakın"
 
 #: po/advisory_rules.php:253
 #, php-format
