--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 13:17+0200\n"
+"PO-Revision-Date: 2011-08-21 13:18+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12833,7 +12833,7 @@ msgstr ""
 
 #: po/advisory_rules.php:255
 msgid "Max InnoDB log size"
-msgstr ""
+msgstr "En fazla InnoDB günlük boyutu"
 
 #: po/advisory_rules.php:256
 msgid "The InnoDB log file size is inadequately large."
