--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 13:19+0200\n"
+"PO-Revision-Date: 2011-08-21 13:34+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12852,6 +12852,16 @@ msgid ""
 "\"http://mysqldatabaseadministration.blogspot.com/2007/01/increase-"
 "innodblogfilesize-proper-way.html\\\">this blog entry</a>"
 msgstr ""
+"Genellikle innodb_log_file_size değerini {innodb_buffer_pool_size} boyutunun "
+"%%25'ine ayarlamak yeterlidir. Çok innodb_log_file_size, veritabanı "
+"çökmesinden sonra kurtarma zamanı oldukça yavaşlar. Aynı zamanda <a "
+"href=\\\"http://www.mysqlperformanceblog.com/2006/07/03/choosing-proper-"
+"innodb_log_file_size/\\\">bu Makaleye</a> bakın. Sunucuyu kapatmanız, InnoDB "
+"günlük dosyalarını kaldırmanız, my.cnf içindeki yeni değeri ayarlamanız, "
+"sunucuyu başlatmanız gerekir, sonrada herşeyin iyi gittiğini anlamak için "
+"hata günlüklerini kontrol etmelisiniz. Aynı zamanda <a "
+"href=\\\"http://mysqldatabaseadministration.blogspot.com/2007/01/increase-"
+"innodblogfilesize-proper-way.html\\\">bu blog girişine</a> bakın"
 
 #: po/advisory_rules.php:258
 #, php-format
