--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 13:34+0200\n"
+"PO-Revision-Date: 2011-08-21 13:35+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12866,7 +12866,7 @@ msgstr ""
 #: po/advisory_rules.php:258
 #, php-format
 msgid "Your absolute InnoD log size is %s MiB"
-msgstr ""
+msgstr "Kesin InnoD günlük boyutunuz %s MiB"
 
 #: po/advisory_rules.php:260
 msgid "InnoDB buffer pool size"
