Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 13:35+0200\n"
+"PO-Revision-Date: 2011-08-21 13:36+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12874,7 +12874,7 @@ msgstr "InnoDB arabellek havuzu boyutu"
 
 #: po/advisory_rules.php:261
 msgid "Your InnoDB buffer pool is fairly small."
-msgstr ""
+msgstr "InnoD arabellek havuzunuz oldukça küçük."
 
 #: po/advisory_rules.php:262
 #, php-format
