Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 13:36+0200\n"
+"PO-Revision-Date: 2011-08-21 14:32+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12890,6 +12890,16 @@ msgid ""
 "\"http://www.mysqlperformanceblog.com/2007/11/03/choosing-"
 "innodb_buffer_pool_size/\\\">this article</a>"
 msgstr ""
+"InnoDB arabellek havuzu InnoDB tabloları için performansta derin etki yapar. "
+"Tüm kalan belleğinizi bu arabelleğe atayın. Veritabanı sunucuları için "
+"depolama motoru olarak sadece InnoDB kullanın ve başka çalışan hizmetler "
+"(örng. web sunucusu) olmasın, bunu kullanılabilir belleğin %%80'nine kadar "
+"ayarlayabilirsiniz. Eğer durum bu değilse, diğer hizmetlerinizin ve InnoDB-"
+"Tabloları olmayanların bellek tüketimini dikkatlice değerlendirmeniz ve "
+"dolayısıyla bu değişkeni ayarlamanız gerekir. Eğer çok yükseğe ayarlanırsa, "
+"sisteminiz önemli derecede performansı düşüren değiş tokuşa başlayacaktır. "
+"Aynı zamanda <a href=\\\"http://www.mysqlperformanceblog.com/2007/11/03"
+"/choosing-innodb_buffer_pool_size/\\\">bu makaleye</a> bakın."
 
 #: po/advisory_rules.php:263
 #, php-format
