--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 14:32+0200\n"
+"PO-Revision-Date: 2011-08-21 15:15+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12909,6 +12909,10 @@ msgid ""
 "perfectly adequate for your system if you don't have much InnoDB tables or "
 "other services running on the same machine."
 msgstr ""
+"Şu an InnoDB arabellek havuzu için belleğinizin %%%s'ini kullanıyorsunuz. "
+"Eğer %%60'tan az atadıysanız bu kural işe yaramaz, ancak eğer fazla InnoDB "
+"tablolara sahip değilseniz ya da aynı makinede diğer hizmetler çalışıyorsa "
+"bu sisteminiz için tamamen yeterli olabilir."
 
 #: po/advisory_rules.php:265
 msgid "MyISAM concurrent inserts"
