Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 01:33+0200\n"
+"PO-Revision-Date: 2011-08-21 20:29+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11943,6 +11943,10 @@ msgid ""
 "and setting {query_cache_type} to 'ON'. <b>Note:</b> If you are using "
 "memcached, ignore this recommendation."
 msgstr ""
+"Predpomnjenje poizvedb lahko izredno izboljša zmogljivost, če je "
+"konfigurirano pravilno. Omogočite ga tako, da nastavite {query_cache_size} "
+"na dvomestno vrednost MiB in nastavite {query_cache_type} na 'ON'. "
+"<b>Pomnite:</b> Če uporabljate memcached, to priporočilo prezrite."
 
 #: po/advisory_rules.php:68
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
