Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 20:55+0200\n"
+"PO-Revision-Date: 2011-08-21 21:24+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11965,6 +11965,11 @@ msgid ""
 "refman/5.1/en/ha-memcached.html\\\">memcached</a> instead of the MySQL Query "
 "cache, especially if you have multiple slaves."
 msgstr ""
+"Uporabljate predpomnjenje poizvedb MySQL s precej prometno zbirko podatkov. "
+"Morda bi bilo koristno razmisliti o uporabi <a "
+"href=\\\"http://dev.mysql.com/doc/refman/5.1/en/ha-"
+"memcached.html\\\">memcached</a> namesto predpomnjenja poizvedb MySQL, še "
+"posebej, če imate več podrejencev."
 
 #: po/advisory_rules.php:73
 #, php-format
