Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 21:24+0200\n"
+"PO-Revision-Date: 2011-08-21 21:25+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11977,6 +11977,8 @@ msgid ""
 "The query cache is enabled and the server receives %d queries per second. "
 "This rule fires if there is more than 100 queries per second."
 msgstr ""
+"Predpomnjenje poizvedb je omogočeno in strežnik prejema %d poizvedb na "
+"sekundo. To pravilo se sproži, če je več kot 100 poizvedb na sekundo."
 
 #: po/advisory_rules.php:75
 msgid "Query cache efficiency (%)"
