--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 21:26+0200\n"
+"PO-Revision-Date: 2011-08-21 21:46+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11987,6 +11987,7 @@ msgstr "Učinkovitost predpomnjenja poizvedb (%)"
 #: po/advisory_rules.php:76
 msgid "Query cache not running efficiently, it has a low hit rate."
 msgstr ""
+"Predpomnjenje poizvedb ne teče učinkovito, saj ima nizek delež zadetkov."
 
 #: po/advisory_rules.php:77
 msgid "Consider increasing {query_cache_limit}."
