--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 21:46+0200\n"
+"PO-Revision-Date: 2011-08-21 21:47+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11996,7 +11996,7 @@ msgstr "Razmislite o povečanju {query_cache_limit}."
 #: po/advisory_rules.php:78
 #, php-format
 msgid "The current query cache hit rate of %s%% is below 20%%"
-msgstr ""
+msgstr "Trenutni delež zadetkov predpomnilnika poizvedb %s %% je pod 20 %%"
 
 #: po/advisory_rules.php:80
 msgid "Query Cache usage"
