--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 22:10+0200\n"
+"PO-Revision-Date: 2011-08-21 22:12+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12899,7 +12899,7 @@ msgstr ""
 "dolayısıyla bu değişkeni ayarlamanız gerekir. Eğer çok yükseğe ayarlanırsa, "
 "sisteminiz önemli derecede performansı düşüren değiş tokuşa başlayacaktır. "
 "Aynı zamanda <a href=\\\"http://www.mysqlperformanceblog.com/2007/11/03"
-"/choosing-innodb_buffer_pool_size/\\\">bu makaleye</a> bakın."
+"/choosing-innodb_buffer_pool_size/\\\">bu makaleye</a> bakın"
 
 #: po/advisory_rules.php:263
 #, php-format
