Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 22:16+0200\n"
+"PO-Revision-Date: 2011-08-21 22:26+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12021,6 +12021,8 @@ msgid ""
 "The current ratio of free query cache memory to total query cache size is %s"
 "%%. It should be above 80%%"
 msgstr ""
+"Trenutni delež prostega pomnilnika predpomnilnika poizvedb je v primerjavi s "
+"skupnim pomnilnikom predpomnilnima poizvedb %s %%. Moral bi biti nad 80 %%"
 
 #: po/advisory_rules.php:85
 msgid "Query cache fragmentation"
