Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-21 22:26+0200\n"
+"PO-Revision-Date: 2011-08-21 22:29+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12051,6 +12051,9 @@ msgid ""
 "that the query cache is an alternating pattern of free and used blocks. This "
 "value should be below 20%%."
 msgstr ""
+"Predpomnilnik je trenutno %s-%% razdrobljen, pri čemer 100-%% razdrobljenost "
+"pomeni, da je predpomnilnik poizvedb izmeničen vzorec prostih in "
+"uporabljenih blokov. Ta vrednost bi morala biti pod 20 %%."
 
 #: po/advisory_rules.php:90
 msgid "Query cache low memory prunes"
