Fix format string

--- a/po/es.po
+++ b/po/es.po
@@ -13118,7 +13118,7 @@ msgid ""
 "\"http://mysqldatabaseadministration.blogspot.com/2007/01/increase-"
 "innodblogfilesize-proper-way.html\\\">this blog entry</a>"
 msgstr ""
-"Normalmente es suficiente definir «innodb_log_file_size» a el 25% del valor "
+"Normalmente es suficiente definir «innodb_log_file_size» a el 25%% del valor "
 "de «innodb_buffer_pool_size». Un valor muy alto de «innodb_log_file_size» "
 "reduce considerablemente la velocidad de la recuperación luego de una caída "
 "de la base de datos. Revise también <a "
