Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-22 11:21+0200\n"
+"PO-Revision-Date: 2011-08-22 11:23+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -1333,7 +1333,7 @@ msgstr "グラフの削除"
 
 #: js/messages.php:128
 msgid "Edit title and labels"
-msgstr ""
+msgstr "題名・ラベルの編集"
 
 #: js/messages.php:129
 msgid "Add chart to grid"
