--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-22 12:12+0200\n"
+"PO-Revision-Date: 2011-08-22 12:14+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -11632,7 +11632,7 @@ msgstr "プロットする結果の最大数"
 
 #: tbl_zoom_select.php:388
 msgid "Browse/Edit the points"
-msgstr ""
+msgstr "結果表示／プロット点の編集"
 
 #: tbl_zoom_select.php:394
 #, fuzzy
