--- a/po/br.po
+++ b/po/br.po
@@ -866,7 +866,7 @@ msgstr "Ober gant OpenStreetMaps evit ar gwiskad diazez"
 
 #: gis_data_editor.php:134
 msgid "SRID"
-msgstr ""
+msgstr "SRID"
 
 #: gis_data_editor.php:151 js/messages.php:291
 #: libraries/display_tbl.lib.php:665
