Translation update done using Pootle.

--- a/po/br.po
+++ b/po/br.po
@@ -900,7 +900,7 @@ msgstr "Aradennad linennoù"
 
 #: gis_data_editor.php:221 gis_data_editor.php:275
 msgid "Outer Ring:"
-msgstr ""
+msgstr "Kelc'h diavaez :"
 
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:292
 msgid "Inner Ring"
