--- a/po/br.po
+++ b/po/br.po
@@ -1450,7 +1450,7 @@ msgstr "Arventennoù zo bremañ"
 
 #: js/messages.php:157 server_status.php:1590
 msgid "Chart Title"
-msgstr ""
+msgstr "Titl ar grafik"
 
 #. l10n: As in differential values
 #: js/messages.php:159
