--- a/po/br.po
+++ b/po/br.po
@@ -1455,7 +1455,7 @@ msgstr "Titl ar grafik"
 #. l10n: As in differential values
 #: js/messages.php:159
 msgid "Differential"
-msgstr ""
+msgstr "Diforc'herezh"
 
 #: js/messages.php:160
 #, php-format
